--- a/contactme.css
+++ b/contactme.css
@@ -22,6 +22,10 @@
     position: absolute;
     size: 100%;
     object-position: center;
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    right: 0px;
 }
 
 .video32 {
@@ -29,6 +33,10 @@
     object-fit: cover;
     position: absolute;
     size: 100%;
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    right: 0px;
 }
 
 .vid-content {
@@ -122,12 +130,13 @@
     width: 420px;
     align-items: center;
     justify-content: center;
+    backdrop-filter; blur(70px)
     border-radius: 98px;
     display: flex;
     box-shadow: box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);;
-    opacity: 80%;
+    opacity: 70%;
 }
 
 @media only screen and (max-width: 476px) {
